# kagent_vision

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  kagent.yaml  pyproject.toml  run_local.py
k8s/: agent.yaml  mcp-server.yaml  model-config.yaml  secret.yaml
kagent_vision/: agent-card.json  agent.py  mcp_tools.py
servers/: Dockerfile  config.yaml  pyproject.toml
servers/vision_mcp/: __main__.py  asl.py  banana.py  camera.py  files.py  server.py  veo.py
static/: index.html
